# reproducible-ml-experiments-template

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yml
scripts/: evaluate.sh  generate_run_dir_diagram.py  train.sh
src/repro_template/: __init__.py  data.py  evaluate.py  models.py  train.py  utils.py
tests/: test_train_pipeline.py
